--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/tablet.css" media="screen and (min-width: 768px) and (max-width: 992px)">
+    <link rel="stylesheet" href="estilos/media-query.css" media="screen and (min-width: 768px) and (max-width: 992px)">
     <link rel="stylesheet" href="estilos/pc.css" media="screen and (min-width: 992px) and (max-width: 1200px)">
     <link rel="stylesheet" href="estilos/print.css" media="only print">
 
