--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="estilos/print.css" media="only print">
 
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -17,17 +19,40 @@
     <main>
         <section id="login">
             <div id="imagem">
-                
+
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Coloque seu e-mail para se conectar, ou <a href="#">se cadastre</a></p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
 
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email"
+                         required>
+
+                        <label for="ilogin">Login</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha"
+                            autocomplete="current-password" minlength="8" maxlength="25" required>
+
+                        <label for="isenha">Senha</label>
+
+                    </div>
+                    <input type="submit" value="Enviar">
+                    <a href="esqueci.html">
+                        Esqueci a senha </a><span class="material-symbols-outlined">mail</span>
+                   
+                    <input type="reset" value="Limpar">
                 </form>
 
             </div>
-            </section>
+        </section>
     </main>
 
 </body>
