--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/style.css" >
     <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="estilos/print.css" media="only print">
 
@@ -24,15 +24,16 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Coloque seu e-mail para se conectar, ou <a href="#">se cadastre</a></p>
+
                 <form action="login.php" method="post" autocomplete="on">
 
                     <div class="campo">
                         <span class="material-symbols-outlined">person</span>
 
                         <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email"
-                         required>
-
+                            required>
                         <label for="ilogin">Login</label>
+
                     </div>
 
                     <div class="campo">
@@ -40,17 +41,16 @@
 
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha"
                             autocomplete="current-password" minlength="8" maxlength="25" required>
-
                         <label for="isenha">Senha</label>
 
                     </div>
-                    <input type="submit" value="Enviar">
-                    <a href="esqueci.html">
-                        Esqueci a senha </a><span class="material-symbols-outlined">mail</span>
-                   
-                    <input type="reset" value="Limpar">
-                </form>
 
+                    <input type="submit" value="Entrar">
+
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    </a>
+                </form>
             </div>
         </section>
     </main>
